// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`empty > renders empty parser 1`] = `
"import * as DP from "@duplojs/utils/dataParser";

export const emptyParser = DP.empty({ coerce: true });"
`;

exports[`empty > renders empty parser without coerce 1`] = `
"import * as DP from "@duplojs/utils/dataParser";

export const emptyParserNoCoerce = DP.empty();"
`;
